2010-08-14  Chong Yidong  <cyd@stupidchicken.com>

	* simple.el (kill-region): Doc fix (Bug#6787).

2010-08-14  Glenn Morris  <rgm@gnu.org>

	* calendar/diary-lib.el (diary-header-line-format):
	Fit it to the window, not the frame.

2010-08-11  Andreas Schwab  <schwab@linux-m68k.org>

	* subr.el (ignore-errors): Add debug declaration.

2010-08-09  Geoff Gole  <geoffgole@gmail.com>  (tiny change)

	* whitespace.el (whitespace-color-off): Remove post-command-hook
	locally.

2010-08-08  Johan Bockgård  <bojohan@gnu.org>

	* replace.el (replace-highlight): Bind isearch-forward and
	isearch-error, ensuring that highlighting is updated if the user
	switches the search direction (Bug#6808).

	* isearch.el (isearch-lazy-highlight-forward): New var.
	(isearch-lazy-highlight-new-loop, isearch-lazy-highlight-search):
	(isearch-lazy-highlight-update): Use it.

2010-08-06  Kenichi Handa  <handa@m17n.org>

	* international/mule.el (define-charset): Store NAME as :base
	property.
	(ctext-non-standard-encodings-table): Pay attention to charset
	aliases.
	(ctext-pre-write-conversion): Sort ctext-standard-encodings by the
	current priority.  Force using the designation of the specific
	charset by adding `charset' text property.  Improve the whole
	algorithm.

2010-08-05  Juanma Barranquero  <lekktu@gmail.com>

	* emulation/pc-select.el (pc-selection-mode-hook)
	(copy-region-as-kill-nomark, beginning-of-buffer-mark)
	(pc-selection-mode): Fix typos in docstrings.

2010-08-04  Kenichi Handa  <handa@m17n.org>

	* language/cyrillic.el: Don't add "microsoft-cp1251" to
	ctext-non-standard-encodings-alist here.

	* international/mule.el (ctext-non-standard-encodings-alist): Add
	"koi8-r" and "microsoft-cp1251".
	(ctext-standard-encodings): New variable.
	(ctext-non-standard-encodings-table): List only elements for
	non-standard encodings.
	(ctext-pre-write-conversion): Adjusted for the above change.
	Check ctext-standard-encodings.

	* international/mule-conf.el (compound-text): Doc fix.